<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/s1"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.w10.loginregister2.HealthSchemes"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"

                android:minHeight="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"

                android:id="@+id/toolbar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>





            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="18sp"
                android:layout_below="@+id/toolbar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/hetitle"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:textAlignment="center"
                        android:padding="5dp"
                        />

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:maxLines="1"
                        android:text="@string/hetitle1"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"

                        />

                    <TextView
                        android:id="@+id/description1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title1"
                        android:maxLines="9"
                        android:paddingLeft="12dp"
                        android:textStyle="bold"
                        android:paddingRight="12dp"
                        android:text="@string/hedescription1"
                        android:textColor="#172E8E"
                        android:textSize="18dp"

                        />

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/description1"
                        android:maxLines="1"
                        android:text="@string/hetitle2"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        />


                    <TextView
                        android:id="@+id/description2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title2"
                        android:maxLines="10"
                        android:paddingLeft="12dp"
                        android:text="@string/hedescription2"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/description2"
                        android:maxLines="1"
                        android:text="@string/hetitle3"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>

                    <TextView
                        android:id="@+id/description3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title3"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/hedescription3"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/description3"
                        android:maxLines="1"
                        android:text="@string/hetitle4"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/description4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title4"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/hedescription4"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />



                </RelativeLayout>
            </android.support.v7.widget.CardView>





            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="18sp"
                android:layout_below="@+id/card_view">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ttitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/hettitle"
                        android:textColor="#222"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:textAlignment="center"
                        android:padding="5dp"
                        />

                    <TextView
                        android:id="@+id/ttitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ttitle"
                        android:maxLines="1"
                        android:text="@string/hettitle1"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        />

                    <TextView
                        android:id="@+id/ddescription1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ttitle1"
                        android:maxLines="4"
                        android:paddingLeft="12dp"
                        android:textStyle="bold"
                        android:paddingRight="12dp"
                        android:text="@string/heddescription1"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        />


                    <TextView
                        android:id="@+id/ttitle3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/ddescription1"
                        android:maxLines="1"
                        android:text="@string/hettitle3"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>

                    <TextView
                        android:id="@+id/ddescription3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ttitle3"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/heddescription3"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/ttitle4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_below="@+id/ddescription3"
                        android:maxLines="1"
                        android:text="@string/hettitle4"
                        android:textColor="#5E0D08"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"/>


                    <TextView
                        android:id="@+id/ddescription4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ttitle4"
                        android:maxLines="3"
                        android:paddingLeft="12dp"
                        android:text="@string/heddescription4"
                        android:textColor="#172E8E"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        />



                </RelativeLayout>
            </android.support.v7.widget.CardView>




        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
































